# GamePile

./: .gitignore  README.md  index.css  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  backlog.db  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: GameCard.tsx  GameCover.tsx  LibraryCategoryPreview.tsx  LibraryViewButton.tsx  Navbar.tsx  SearchBar.tsx
src/pages/: GameInfo.tsx  GamePage.tsx  Home.tsx  Library.tsx  LibraryCategory.tsx  Search.tsx  Settings.tsx
