[package]
name = "gamepile"
version = "0.1.0"
description = "A game backlog manager"
authors = ["Niko Komninos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gamepile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.22"
dotenvy = "0.15.7"
rusqlite = { version = "0.37.0", features = ["bundled"] }
log = "0.4.27"
env_logger = "0.11.8"
